--- a/app/src/main/res/layout/fragment_fees.xml
+++ b/app/src/main/res/layout/fragment_fees.xml
@@ -80,7 +80,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
-                    android:text="*******"
+                    android:text="*****"
                     android:textColor="@color/tt_primary"
                     android:textSize="22sp"
                     android:textStyle="bold" />
@@ -127,14 +127,14 @@
             <!-- Total Fees -->
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:background="@drawable/fee_card_bg"
                 android:backgroundTint="#301EE4D0"
-                android:padding="10dp">
+                android:paddingVertical="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -157,7 +157,7 @@
             <!-- Pending Fees -->
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
@@ -187,7 +187,7 @@
             <!-- Received Fees -->
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
@@ -221,7 +221,7 @@
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:paddingTop="16dp"
-            android:paddingBottom="8dp">
+            android:paddingBottom="16dp">
 
             <EditText
                 android:id="@+id/searchEditText"
@@ -238,10 +238,11 @@
 
             <ImageButton
                 android:id="@+id/filterButton"
-                android:layout_width="50dp"
-                android:layout_height="55dp"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
                 android:layout_marginStart="16dp"
                 android:scaleType="centerInside"
+                android:background="#fff"
                 android:src="@drawable/sort"
                 android:contentDescription="Filter options" />
         </LinearLayout>
