--- a/app/src/main/res/layout/fragment_add_student.xml
+++ b/app/src/main/res/layout/fragment_add_student.xml
@@ -37,6 +37,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -57,24 +58,60 @@
                     android:hint="Email address"
                     android:inputType="textEmailAddress"
                     android:padding="14dp" />
+
+                <EditText
+                    android:id="@+id/etDOB"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:layout_marginTop="12dp"
+                    android:background="@drawable/input_background"
+                    android:clickable="true"
+                    android:focusable="false"
+                    android:hint="D.O.B"
+                    android:inputType="none"
+                    android:padding="14dp" />
+
             </LinearLayout>
 
-            <!-- Profile Image Placeholder -->
-            <FrameLayout
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_marginStart="14dp"
-                android:background="@drawable/input_background"
-                android:foregroundGravity="center">
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imgProfile"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
-                    android:layout_gravity="center"
-                    android:src="@android:drawable/ic_menu_camera"
-                    app:tint="@android:color/darker_gray" />
-            </FrameLayout>
+                <!-- Profile Box -->
+                <FrameLayout
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:background="@drawable/alert_round_corner">
+
+                    <!-- Profile Image -->
+                    <ImageView
+                        android:id="@+id/imgProfile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/input_background"
+                        android:clipToOutline="true"
+                        android:src="@drawable/user_profile" />  <!-- ✅ default dummy -->
+                </FrameLayout>
+
+                <!-- Save Button -->
+                <Button
+                    android:id="@+id/btnChangeImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:backgroundTint="#A8A8A8"
+                    android:drawablePadding="8dp"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:text="Choose"
+                    android:textColor="@android:color/white" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <!-- Contact No. + DOB -->
@@ -83,11 +120,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="1">
 
             <EditText
                 android:id="@+id/etContact"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/input_background"
@@ -95,18 +132,6 @@
                 android:inputType="phone"
                 android:padding="14dp" />
 
-            <EditText
-                android:id="@+id/etDOB"
-                android:layout_width="0dp"
-                android:layout_height="55dp"
-                android:layout_marginStart="10dp"
-                android:layout_weight="0.8"
-                android:background="@drawable/input_background"
-                android:clickable="true"
-                android:focusable="false"
-                android:hint="D.O.B"
-                android:inputType="none"
-                android:padding="14dp" />
         </LinearLayout>
         <!-- Select gender with RadioGroup -->
         <LinearLayout
@@ -197,12 +222,12 @@
             android:id="@+id/etCustomSubjects"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/input_background"
             android:hint="Enter subject Name"
-            android:visibility="gone"
-            android:layout_marginTop="12dp"
+            android:inputType="textCapWords|textMultiLine"
             android:padding="14dp"
-            android:inputType="textCapWords|textMultiLine"/>
+            android:visibility="gone" />
 
 
         <!-- Hide until class is selected -->
@@ -210,27 +235,27 @@
             android:id="@+id/layoutSubjects"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:orientation="vertical"
-            android:visibility="gone"
-            android:layout_marginTop="12dp">
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Select Subjects"
-                android:textStyle="bold"
                 android:textSize="16sp"
-                android:layout_marginBottom="8dp"/>
+                android:textStyle="bold" />
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroupSubjects"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:singleSelection="false"
+                android:padding="8dp"
                 app:chipSpacing="8dp"
-                app:singleLine="false"
                 app:selectionRequired="false"
-                android:padding="8dp"/>
+                app:singleLine="false"
+                app:singleSelection="false" />
         </LinearLayout>
 
 
