--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -45,12 +45,11 @@
             android:id="@+id/tvAvatar"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:background="@drawable/circle_background"
-            android:gravity="center"
-            android:src="@drawable/logo_blue"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:background="@drawable/input_background"
+            android:clipToOutline="true"
+            android:src="@drawable/user_profile" />
 
         <LinearLayout
             android:layout_width="0dp"
