--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -12,27 +12,6 @@
     app:cardUseCompatPadding="true">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/active_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/alert_round_corner"
-            android:backgroundTint="@color/tt_danger"
-            android:padding="3dp"
-            android:text="Inactive"
-            android:textColor="#fff"
-            android:textSize="10sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -91,15 +70,21 @@
                 android:text="Class 5"
                 android:textSize="13sp"
                 android:textStyle="bold" />
-
             <TextView
-                android:id="@+id/tvFeeState"
+                android:id="@+id/active_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Paid"
-                android:textColor="#25E041"
-                android:textSize="12sp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="end"
+                android:gravity="end"
+                android:background="@drawable/alert_round_corner"
+                android:backgroundTint="@color/tt_danger"
+                android:padding="3dp"
+                android:text="Inactive"
+                android:textColor="#fff"
+                android:textSize="10sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
