--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-<solid android:color="@color/tt_success"/>
-    <stroke android:color="#BABABA" android:width="2dp"/>
+<solid android:color="#62E967"/>
+    <stroke android:color="#BABABA" android:width="1dp"/>
 </shape>
