--- a/app/src/main/res/drawable/selector_date_button.xml
+++ b/app/src/main/res/drawable/selector_date_button.xml
@@ -1,21 +1,18 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/tt_primary"/>
-            <corners android:radius="20dp"/>
-        </shape>
-    </item>
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/tt_primary"/>
-            <corners android:radius="20dp"/>
+            <solid android:color="@color/tt_primary" />
+            <corners android:radius="10dp"/>
+            <padding android:top="1dp" android:bottom="1dp"
+                android:left="1dp" android:right="1dp"/>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <stroke android:color="@color/tt_primary" android:width="1dp"/>
-            <corners android:radius="20dp"/>
-            <solid android:color="@android:color/transparent"/>
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="10dp"/>
+            <padding android:top="1dp" android:bottom="1dp"
+                android:left="1dp" android:right="1dp"/>
         </shape>
     </item>
 </selector>
