--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -102,29 +102,148 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
 
                 <EditText
                     android:id="@+id/etemail"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="55dp"
                     android:layout_weight="1"
                     android:background="@drawable/input_background"
                     android:hint="Email address"
                     android:padding="15dp"
                     android:textColorHint="#ACACAC" />
 
-                <Button
-                    android:id="@+id/btnVerifyEmail"
+                <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="55dp"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/btn_blue"
-                    android:text="Verify"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold" />
+                    android:layout_marginStart="8dp">
+
+                    <Button
+                        android:id="@+id/btnVerifyEmail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/btn_blue"
+                        android:text="Verify"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/ivVerified"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_check"
+                        android:visibility="gone"/>
+                </FrameLayout>
             </LinearLayout>
 
+<LinearLayout
+    android:id="@+id/otp_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
+
+
+            <TextView
+                android:layout_marginTop="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OTP has been sent to your email"
+                android:textColor="#313131"
+                android:textSize="14sp" />
+
+            <!-- OTP input fields -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
+                <EditText
+                    android:id="@+id/etOtp1"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/input_background"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textSize="20sp"
+                    android:imeOptions="actionNext"
+                    android:padding="10dp" />
+
+                <EditText
+                    android:id="@+id/etOtp2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/input_background"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textSize="20sp"
+                    android:imeOptions="actionNext"
+                    android:padding="10dp" />
+
+                <EditText
+                    android:id="@+id/etOtp3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/input_background"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textSize="20sp"
+                    android:imeOptions="actionNext"
+                    android:padding="10dp" />
+
+                <EditText
+                    android:id="@+id/etOtp4"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/input_background"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textSize="20sp"
+                    android:imeOptions="actionDone"
+                    android:padding="10dp" />
+            </LinearLayout>
+    <!-- Resend OTP Section -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="end"
+        android:layout_marginBottom="15dp">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Didn’t receive the code?"
+            android:textSize="14sp"
+            android:textColor="#555555"/>
+
+        <TextView
+            android:id="@+id/tvResendOtp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" Resend OTP"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:textColor="@color/tt_primary"
+            android:paddingStart="4dp"/>
+    </LinearLayout>
+
+
+</LinearLayout>
             <!-- Password -->
             <TextView
                 android:layout_width="wrap_content"
@@ -200,6 +319,7 @@
                 android:background="@drawable/btn_blue"
                 android:text="Submit"
                 android:textColor="@android:color/white"
+                android:layout_marginBottom="30dp"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
