--- a/app/src/main/res/layout/fragment_student_details.xml
+++ b/app/src/main/res/layout/fragment_student_details.xml
@@ -200,7 +200,11 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="N/A"
-                    android:textColor="#000000"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:textStyle="bold"
+                    android:autoLink="phone"
+                    android:textColor="@color/tt_primary"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -275,7 +279,11 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="N/A"
-                    android:textColor="#000000"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:textStyle="bold"
+                    android:autoLink="phone"
+                    android:textColor="@color/tt_primary"
                     android:textSize="16sp" />
             </LinearLayout>
 
